--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,42 +27,65 @@ a , li {
     background-color:rgba(0, 0, 0, 0);
     height: 80px;
     width: 100%;
-    position: fixed;
-    z-index: 100;
+    z-index: 1000;
+    position: relative;
+    display: flex;
 
 }
 
 #navBar {
     display: flex;
-    margin-top: 0;
-    justify-content: space-between;
-    align-items: center;
+    width: 100%;
+    margin: 0;
     padding: 5px;
+    height: 80px;
+    justify-content: space-between;
 }
 
 .MenuNav {
     height: 80px;
     display: flex;
     align-items: center;
-
 }
 
 .MenuNav ul {
     padding: 0;
     margin: 0;
+    margin-right: 10px;
+    float: right;
+
 }
 
 .MenuNav ul li {
-    margin-right: 10px;
-    font-size: 14px;
+    line-height: 80px;
+    margin: 0 5px;
 }
 
+.MenuNav ul li a {
+    color: #1416B8;
+    font-size: 14px;
+}
 .LogoHeader h4 a {
     color: #DDF246;
     font-size: 40px;
+    line-height: 68px;
+    padding: 0 10px;
+    font-weight: bold;
+    height: 80px;
 }
 
+.checktn {
+    font-size: 30px;
+    color: #1416B8;
+    float: right;
+    line-height: 78px;
+    cursor: pointer;
+    display: none;
+}
 
+#check {
+    display: none;
+}
 
 /*----------------HOVER NAV------------*/
 #navBar .MenuNav ul a:hover {
@@ -74,64 +97,97 @@ a , li {
 }
 
 
-
 /*----------------SISTEMA RESPONSIVO NAV-------------*/
 
 @media (max-width: 768px) {
-    #navBar ul {
-        display: none;
+    #navBar {
+        justify-content: space-evenly;
     }
     #navBar ul li {
-        font-size: 12px;
+        display: block;
+        margin:  50px 0;
+        line-height: 30px;
     }
+    #navBar ul li a {
+        font-size: 14px;
+    }
+
     .LogoHeader h4 a {
         font-size: 30px;
+        line-height: 85px;
         }
-    .logoHeader h4 {
-        margin-top: 22px;
-}   
+
     .LogoHeader {
     display: flex;
     align-items: center;
 }
+.checktn {
+    display: block;
 }
+#navBar ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #DDF246;
+    top: 80px;
+    left: 0;
+    left: -100%;
+    text-align: center;
+    transition: all .5s;
+}
+
+.barras {
+    width: 150px;
+}
+
+#check:checked ~ .MenuNav ul {
+    left: 0;
+}
+}
+
 
 @media (max-width: 480px) {
-    #navBar ul li {
-        display: none;
+    .LogoHeader h4 a {
+        font-size: 25px;
+        line-height: 85px;
+        }
+    .checktn {
+        font-size: 25px;
+        line-height: 70px;
     }
 }
-
 /* ----------------------------------MAIN-------------------------------------------------------- */
 /* ---------ESTILOS DEL BODY------- */
 
 main {
     min-height: 100vh;
-    padding-top: 60px;
     background-color: #ffffff;
 }
 
-/* --------------MAIN INICIO-------------- */
-#carouselExampleFade {
-    padding-top: 30px;
-}
-
 /*----------------SISTEMA RESPONSIVO MAIN INICIO-------------*/
-@media (max-width: 480px) {
-    .carousel-inner {
-        width: 100%;
-        height: auto;
+
+@media (max-width: 942px) {
+    main {
+        min-height: 0;
+        margin-bottom: 30px;
     }
+    main, footer {
+        margin: 0;
+        padding: 0;
+}
 }
 @media (max-width: 768px) {
     .carousel-inner {
         width: 100%;
         height: auto;
-        margin: 0;
-        margin-top: 40px;
+}
+main {
+    min-height: 0;
+    margin-bottom: 20px;
 }
 }
-/* ----------PAGE FOTOSPERSONAS -------*/
+
+/* ---------------------------------PAGE FOTOSPERSONAS -------------------------------------------*/
 
 #fotosPersonas {
     width: 100%;
@@ -142,13 +198,13 @@ main {
 }
 
 #fotosPersonas img {
-    width: 483px;
+    width: 480px;
     margin: 15px;
     display: flex;
 }
 
 
-/*------PAGE FOTOSLUGARES----*/
+/*----------------------------------------PAGE FOTOSLUGARES-------------------------------------------*/
 
 #fotosLugares {
     width: 100%;
@@ -229,7 +285,6 @@ main {
         margin-bottom: 20px;
     }
 }
-
 
 /*-------------PAGE CONTACTO --------*/
 
@@ -320,6 +375,7 @@ main {
     display: flex;
     margin-top: 20px;
     font-size: 18px;
+    font-weight: bold;
 }
 
 /*-------- CAJA #3 LINKS PAGES---------*/
