--- a/CSS/style.css
+++ b/CSS/style.css
@@ -244,7 +244,12 @@ main {
 }
 
 /*----------------SISTEMA RESPONSIVO bio------------*/
-
+@media (max-width: 968px) {
+    .biografiaFoto img {
+        width: 320px;
+        height: 320px;
+    }
+}
 @media (max-width: 768px) {
     #biografia {
         display: flex;
