--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,121 +1,126 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:fuenteHelvetica;
-    scroll-behavior: smooth;
-    scroll-padding-top: 80px;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: fuenteHelvetica;
+  scroll-behavior: smooth;
+  scroll-padding-top: 80px;
 }
 
-a , li {
-    font-size: none;
-    text-decoration: none;
-    display: inline-block;
-    color: #1416B8;
+a, li {
+  font-size: none;
+  text-decoration: none;
+  display: inline-block;
+  color: #1416B8;
 }
 
 /* -----------------------------------------------FUENTE --------------------------------------------------*/
-
 @font-face {
-    font-family: fuenteHelvetica;
-    src: url(../fuentes/Helvetica.ttf);
+  font-family: fuenteHelvetica;
+  src: url(../fuentes/Helvetica.ttf);
 }
-
 /* ----------------------------------HEADER - NAV------------------------------------------------------- */
 #header {
-    background-color:rgba(0, 0, 0, 0);
-    height: 80px;
-    width: 100%;
-    position: sticky;
-    top: 0;
-    z-index: 101;
+  background-color: rgba(0, 0, 0, 0);
+  height: 80px;
+  width: 100%;
+  position: sticky;
+  top: 0;
+  z-index: 101;
+}
 
-}
 #navBar {
-    display: flex;
-    width: 100%;
-    margin: 0;
-    padding: 5px;
-    height: 80px;
-    justify-content: space-between;
+  display: flex;
+  width: 100%;
+  margin: 0;
+  padding: 5px;
+  height: 80px;
+  justify-content: space-between;
 }
+
 .MenuNav {
-    height: 80px;
-    display: flex;
-    align-items: center;
+  height: 80px;
+  display: flex;
+  align-items: center;
 }
+
 .MenuNav ul {
-    padding: 0;
-    margin: 0;
-    margin-right: 10px;
-    float: right;
+  padding: 0;
+  margin: 0;
+  margin-right: 10px;
+  float: right;
 }
+
 .MenuNav ul li {
-    line-height: 80px;
-    margin: 0 5px;
+  line-height: 80px;
+  margin: 0 5px;
 }
+
 .MenuNav ul li a {
-    color: #1416B8;
-    font-size: 14px;
+  color: #1416B8;
+  font-size: 14px;
 }
+
 .LogoHeader h4 a {
-    color: #DDF246;
-    font-size: 40px;
-    line-height: 68px;
-    padding: 0 10px;
-    font-weight: bold;
-    height: 80px;
+  color: #DDF246;
+  font-size: 40px;
+  line-height: 68px;
+  padding: 0 10px;
+  font-weight: bold;
+  height: 80px;
 }
+
 .checktn {
-    font-size: 30px;
-    color: #1416B8;
-    float: right;
-    line-height: 78px;
-    cursor: pointer;
-    display: none;
+  font-size: 30px;
+  color: #1416B8;
+  float: right;
+  line-height: 78px;
+  cursor: pointer;
+  display: none;
 }
+
 #check {
-    display: none;
+  display: none;
 }
+
 /*-----------------------------HOVER NAV--------------------------------------*/
 #navBar .MenuNav ul a:hover {
-    color: #DDF246;
+  color: #DDF246;
 }
 
 #navBar .LogoHeader h4 a:hover {
-    color: #1416B8;
+  color: #1416B8;
 }
 
 /*-------------------------------SISTEMA RESPONSIVO NAV---------------------------------------------------*/
-
 @media (max-width: 768px) {
-    #header {
-        position: relative;
-    }
-    #navBar {
-        justify-content: space-evenly;
-        margin-top: 20px;
-    }
-    #navBar ul li {
-        display: block;
-        margin:  50px 0;
-        line-height: 30px;
-    }
-    #navBar ul li a {
-        font-size: 14px;
-    }
-    .LogoHeader h4 a {
-        font-size: 35px;
-        line-height: 85px;
-        }
-    .LogoHeader {
+  #header {
+    position: relative;
+  }
+  #navBar {
+    justify-content: space-evenly;
+    margin-top: 20px;
+  }
+  #navBar ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px;
+  }
+  #navBar ul li a {
+    font-size: 14px;
+  }
+  .LogoHeader h4 a {
+    font-size: 35px;
+    line-height: 85px;
+  }
+  .LogoHeader {
     display: flex;
     align-items: center;
-}
-.checktn {
+  }
+  .checktn {
     display: block;
-}
-#navBar ul {
+  }
+  #navBar ul {
     position: fixed;
     width: 100%;
     height: 100vh;
@@ -124,372 +129,338 @@ a , li {
     left: 0;
     left: -100%;
     text-align: center;
-    transition: all .5s;
-}
-#navBar .MenuNav ul a:hover {
-    color:white;
-}
-.barras {
+    transition: all 0.5s;
+  }
+  #navBar .MenuNav ul a:hover {
+    color: white;
+  }
+  .barras {
     width: 150px;
-}
-#check:checked ~ .MenuNav ul {
+  }
+  #check:checked ~ .MenuNav ul {
     left: 0;
+  }
 }
-}
-
-
 @media (max-width: 480px) {
-    .LogoHeader h4 a {
-        font-size: 25px;
-        line-height: 85px;
-        }
-    .checktn {
-        font-size: 25px;
-        line-height: 70px;
-    }
-    #navBar {
-        margin-top: 0;
-    }
+  .LogoHeader h4 a {
+    font-size: 25px;
+    line-height: 85px;
+  }
+  .checktn {
+    font-size: 25px;
+    line-height: 70px;
+  }
+  #navBar {
+    margin-top: 0;
+  }
 }
 /* ----------------------------------MAIN-------------------------------------------------------- */
 /* ---------ESTILOS DEL BODY------- */
-
 main {
-    min-height: 100vh;
-    background-color: #ffffff;
-
+  min-height: 100vh;
+  background-color: #ffffff;
 }
 
 /*----------------SISTEMA RESPONSIVO MAIN INICIO-------------*/
-
 @media (max-width: 942px) {
-    main, footer {
-        margin-top: 0;
-        padding: 0;
-}
+  main, footer {
+    margin-top: 0;
+    padding: 0;
+  }
 }
 @media (max-width: 768px) {
-main {
+  main {
     min-height: 0;
     margin-bottom: 20px;
     margin-top: 40px;
+  }
 }
-}
-
 /* ---------------------------------PAGE FOTOSPERSONAS -------------------------------------------*/
-
 #fotosPersonas {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #fotosPersonas img {
-    width: 480px;
-    margin: 15px;
-    display: flex;
+  width: 480px;
+  margin: 15px;
+  display: flex;
 }
-
 
 /*----------------------------------------PAGE FOTOSLUGARES-------------------------------------------*/
-
 #fotosLugares {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
+
 #fotosLugares img {
-    width: 483px;
-    margin: 15px;
-    display: flex;
+  width: 483px;
+  margin: 15px;
+  display: flex;
 }
 
 /* --------------------------------------------PAGE BIO -------------------------------------------------- */
-
 #biografia {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color:#ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #ffffff;
 }
 
 #contenedorTextobio {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .biografiaParrafo {
-    display: flex;
-    text-align: justify;
-    width: 480px;
-    height: 200px;
-    justify-content: flex-start;
-    padding: 20px;
+  display: flex;
+  text-align: justify;
+  width: 480px;
+  height: 200px;
+  justify-content: flex-start;
+  padding: 20px;
 }
 
 .biografiaAbout {
-    display: flex;
-    flex-direction: column;
-    color: #000000;
-    font-size: 12px;
-    padding: 20px;
+  display: flex;
+  flex-direction: column;
+  color: #000000;
+  font-size: 12px;
+  padding: 20px;
 }
 
 .biografiaParrafo p {
-    color: #000000;
-    font-size: 15px;
+  color: #000000;
+  font-size: 15px;
 }
 
 .biografiaFoto img {
-    width: 380px;
-    height: 380px;
+  width: 380px;
+  height: 380px;
 }
 
 /*----------------SISTEMA RESPONSIVO bio------------*/
 @media (max-width: 968px) {
-    .biografiaFoto img {
-        width: 320px;
-        height: 320px;
-    }
+  .biografiaFoto img {
+    width: 320px;
+    height: 320px;
+  }
 }
 @media (max-width: 768px) {
-    #biografia {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 30px;
-    }
-    #biografia .biografiaFoto img {
-        width: 250px;
-        height: 250px;
-        margin-top: 20px;
-    }
-    #contenedorTextobio .biografiaParrafo {
-        width: 320px;
-        height: 200px;
-    }
-    #contenedorTextobio .biografiaParrafo p {
-        font-size: 12px;
-        
-    }
-    .biografiaAbout {
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
+  #biografia {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 30px;
+  }
+  #biografia .biografiaFoto img {
+    width: 250px;
+    height: 250px;
+    margin-top: 20px;
+  }
+  #contenedorTextobio .biografiaParrafo {
+    width: 320px;
+    height: 200px;
+  }
+  #contenedorTextobio .biografiaParrafo p {
+    font-size: 12px;
+  }
+  .biografiaAbout {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
 }
-
 @media (max-width: 480px) {
-    #biografia .biografiaFoto img {
-        width: 250px;
-        height: 250px;
-        margin-top: 0;
-    }
-    #biografia {
-        margin: 20px 0 0 0;
-    }
+  #biografia .biografiaFoto img {
+    width: 250px;
+    height: 250px;
+    margin-top: 0;
+  }
+  #biografia {
+    margin: 20px 0 0 0;
+  }
 }
-
-
-
 /*-------------PAGE CONTACTO --------*/
-
 .MainContacto {
-    background-image: url(../images/contacto/contacto.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
+  background-image: url(../images/contacto/contacto.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
+
 #contenedorContacto {
-    display: inline-block;
-    
+  display: inline-block;
 }
 
 .formContacto form {
-    position: absolute; 
-    margin-top: 100px;
-    left: 495px;
+  position: absolute;
+  margin-top: 100px;
+  left: 495px;
 }
 
 .formcontactoNombre {
-    font-size: 15px;
-    background-color: white;
-    border: 1px solid grey;
-    height: 35px;
-    border-radius: 20px;
-    width: 250px;
+  font-size: 15px;
+  background-color: white;
+  border: 1px solid grey;
+  height: 35px;
+  border-radius: 20px;
+  width: 250px;
 }
 
 .formcontactoEmail {
-    font-size: 15px;
-    background-color: white;
-    border: 1px solid grey;
-    height: 35px;
-    border-radius: 20px;
-    width: 250px;
+  font-size: 15px;
+  background-color: white;
+  border: 1px solid grey;
+  height: 35px;
+  border-radius: 20px;
+  width: 250px;
 }
 
 .formcontactoMensaje {
-    font-size: 15px;
-    background-color: white;
-    border: 1px solid grey;
-    border-radius: 10px;
-    width: 260px;
+  font-size: 15px;
+  background-color: white;
+  border: 1px solid grey;
+  border-radius: 10px;
+  width: 260px;
 }
 
 #submit {
-    font-size: 15px;
-    margin: 3px;
-    display: inline-block;
-
+  font-size: 15px;
+  margin: 3px;
+  display: inline-block;
 }
 
 /*-------------------------------------------FOOTER-------------------------------------------------------*/
-
 #footer {
-    display: flex;
-    height: auto;
-    width: 100%;
-    bottom: 0;
-    background-color: #ffffff;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  height: auto;
+  width: 100%;
+  bottom: 0;
+  background-color: #ffffff;
+  align-items: center;
+  justify-content: space-between;
 }
 
 /*--------- CAJA #1 LOGONOMBRE---------*/
-
 .footerLogonombre {
-    display: flex;
-    width: auto;
-    height: auto;
-    justify-content: flex-start;
-    color: #1416B8;
-    text-align: left;
-    flex-direction: column;
-    margin-left: 10px;
+  display: flex;
+  width: auto;
+  height: auto;
+  justify-content: flex-start;
+  color: #1416B8;
+  text-align: left;
+  flex-direction: column;
+  margin-left: 10px;
 }
 
 .footerLogonombre p {
-    margin-bottom: 0;
-    font-size: 10px;
+  margin-bottom: 0;
+  font-size: 10px;
 }
 
 .footerLogonombre h4 {
-    display: flex;
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: bold;
+  display: flex;
+  margin-top: 20px;
+  font-size: 18px;
+  font-weight: bold;
 }
 
 /*-------- CAJA #3 LINKS PAGES---------*/
-
 .footerLinks ul {
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
 }
 
 .footerLinks ul li {
-    width: auto;
-    list-style: none;
-    padding: 0px;
-    display: flex;
-    justify-content: flex-end;
-    font-size: 12px;
-    
-
+  width: auto;
+  list-style: none;
+  padding: 0px;
+  display: flex;
+  justify-content: flex-end;
+  font-size: 12px;
 }
-
 
 /*---------- CAJA #4 REDES----------*/
-
-
 .footerRedes i {
-    font-size: 17px;
-    color: #DDF246;
-    margin: 5px;
+  font-size: 17px;
+  color: #DDF246;
+  margin: 5px;
 }
+
 .footerRedes {
-    display: flex;
-    align-items: center;
-    height: 40px;
-    width: 40px;
-    
+  display: flex;
+  align-items: center;
+  height: 40px;
+  width: 40px;
 }
 
 /*------------HOVERFOOTER-------------*/
-
 #footer ul a:hover {
-    color: #DDF246;
+  color: #DDF246;
 }
 
 /*----SISTEMA RESPONSIVO FOOTER-------*/
-
-
 @media (max-width: 768px) {
-    #footer {
-        flex-direction: column;
-        gap: 10px;
-    }
-    .footerLinks ul li {
-        font-size: 12px;
-        justify-content: center;
-        padding: 0;
-    }
-    
-    .footerLinks ul {
-        margin-top: 0;
-        justify-content: center;
-        padding: 0;
-    }
-    .footerRedes i {
-        font-size: 12px;
-    }
-
-    .footerLogonombre h4 {
-        font-size: 14px;
-        justify-content: center;
-        margin-top: 0;
-
-    }
-    .footerLogonombre p {
-        font-size: 8px;
-        justify-content: center;
-    }
+  #footer {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .footerLinks ul li {
+    font-size: 12px;
+    justify-content: center;
+    padding: 0;
+  }
+  .footerLinks ul {
+    margin-top: 0;
+    justify-content: center;
+    padding: 0;
+  }
+  .footerRedes i {
+    font-size: 12px;
+  }
+  .footerLogonombre h4 {
+    font-size: 14px;
+    justify-content: center;
+    margin-top: 0;
+  }
+  .footerLogonombre p {
+    font-size: 8px;
+    justify-content: center;
+  }
 }
-
-
 @media (max-width: 480px) {
-    #footer {
-        flex-direction: column;
-        gap: 10px;
-    }
-    .footerLinks ul li {
-        font-size: 10px;
-        justify-content: center;
-        padding: 0;
-    }
-    
-    .footerLinks ul {
-        margin-top: 0;
-        justify-content: center;
-        padding: 0;
-    }
-    .footerRedes i {
-        font-size: 10px;
-    }
-
-
-    .footerLogonombre h4 {
-        font-size: 12px;
-        justify-content: center;
-        margin-top: 0;
-
-    }
-    .footerLogonombre p {
-        font-size: 8px;
-        justify-content: center;
-    }
+  #footer {
+    flex-direction: column;
+    gap: 10px;
+  }
+  .footerLinks ul li {
+    font-size: 10px;
+    justify-content: center;
+    padding: 0;
+  }
+  .footerLinks ul {
+    margin-top: 0;
+    justify-content: center;
+    padding: 0;
+  }
+  .footerRedes i {
+    font-size: 10px;
+  }
+  .footerLogonombre h4 {
+    font-size: 12px;
+    justify-content: center;
+    margin-top: 0;
+  }
+  .footerLogonombre p {
+    font-size: 8px;
+    justify-content: center;
+  }
 }
+
+/*# sourceMappingURL=style.css.map */
