--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,156 +1,17 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family:fuenteHelvetica;
-    scroll-behavior: smooth;
-    scroll-padding-top: 80px;
-}
+@import "footer";
+@import "headerNav";
+@import "resetCss";
+@import "personas/main";
 
-a , li {
-    font-size: none;
-    text-decoration: none;
-    display: inline-block;
-    color: #1416B8;
-}
 
-/* -----------------------------------------------FUENTE --------------------------------------------------*/
+
+/* ---------------FUENTE -------------------*/
 
 @font-face {
     font-family: fuenteHelvetica;
     src: url(../fuentes/Helvetica.ttf);
 }
 
-/* ----------------------------------HEADER - NAV------------------------------------------------------- */
-#header {
-    background-color:rgba(0, 0, 0, 0);
-    height: 80px;
-    width: 100%;
-    position: sticky;
-    top: 0;
-    z-index: 101;
-
-}
-#navBar {
-    display: flex;
-    width: 100%;
-    margin: 0;
-    padding: 5px;
-    height: 80px;
-    justify-content: space-between;
-}
-.MenuNav {
-    height: 80px;
-    display: flex;
-    align-items: center;
-}
-.MenuNav ul {
-    padding: 0;
-    margin: 0;
-    margin-right: 10px;
-    float: right;
-}
-.MenuNav ul li {
-    line-height: 80px;
-    margin: 0 5px;
-}
-.MenuNav ul li a {
-    color: #1416B8;
-    font-size: 14px;
-}
-.LogoHeader h4 a {
-    color: #DDF246;
-    font-size: 40px;
-    line-height: 68px;
-    padding: 0 10px;
-    font-weight: bold;
-    height: 80px;
-}
-.checktn {
-    font-size: 30px;
-    color: #1416B8;
-    float: right;
-    line-height: 78px;
-    cursor: pointer;
-    display: none;
-}
-#check {
-    display: none;
-}
-/*-----------------------------HOVER NAV--------------------------------------*/
-#navBar .MenuNav ul a:hover {
-    color: #DDF246;
-}
-
-#navBar .LogoHeader h4 a:hover {
-    color: #1416B8;
-}
-
-/*-------------------------------SISTEMA RESPONSIVO NAV---------------------------------------------------*/
-
-@media (max-width: 768px) {
-    #header {
-        position: relative;
-    }
-    #navBar {
-        justify-content: space-evenly;
-        margin-top: 20px;
-    }
-    #navBar ul li {
-        display: block;
-        margin:  50px 0;
-        line-height: 30px;
-    }
-    #navBar ul li a {
-        font-size: 14px;
-    }
-    .LogoHeader h4 a {
-        font-size: 35px;
-        line-height: 85px;
-        }
-    .LogoHeader {
-    display: flex;
-    align-items: center;
-}
-.checktn {
-    display: block;
-}
-#navBar ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #DDF246;
-    top: 80px;
-    left: 0;
-    left: -100%;
-    text-align: center;
-    transition: all .5s;
-}
-#navBar .MenuNav ul a:hover {
-    color:white;
-}
-.barras {
-    width: 150px;
-}
-#check:checked ~ .MenuNav ul {
-    left: 0;
-}
-}
-
-
-@media (max-width: 480px) {
-    .LogoHeader h4 a {
-        font-size: 25px;
-        line-height: 85px;
-        }
-    .checktn {
-        font-size: 25px;
-        line-height: 70px;
-    }
-    #navBar {
-        margin-top: 0;
-    }
-}
 /* ----------------------------------MAIN-------------------------------------------------------- */
 /* ---------ESTILOS DEL BODY------- */
 
@@ -176,21 +37,7 @@ main {
 }
 }
 
-/* ---------------------------------PAGE FOTOSPERSONAS -------------------------------------------*/
 
-#fotosPersonas {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-#fotosPersonas img {
-    width: 480px;
-    margin: 15px;
-    display: flex;
-}
 
 
 /*----------------------------------------PAGE FOTOSLUGARES-------------------------------------------*/
@@ -346,150 +193,3 @@ main {
 
 }
 
-/*-------------------------------------------FOOTER-------------------------------------------------------*/
-
-#footer {
-    display: flex;
-    height: auto;
-    width: 100%;
-    bottom: 0;
-    background-color: #ffffff;
-    align-items: center;
-    justify-content: space-between;
-}
-
-/*--------- CAJA #1 LOGONOMBRE---------*/
-
-.footerLogonombre {
-    display: flex;
-    width: auto;
-    height: auto;
-    justify-content: flex-start;
-    color: #1416B8;
-    text-align: left;
-    flex-direction: column;
-    margin-left: 10px;
-}
-
-.footerLogonombre p {
-    margin-bottom: 0;
-    font-size: 10px;
-}
-
-.footerLogonombre h4 {
-    display: flex;
-    margin-top: 20px;
-    font-size: 18px;
-    font-weight: bold;
-}
-
-/*-------- CAJA #3 LINKS PAGES---------*/
-
-.footerLinks ul {
-    display: flex;
-    flex-direction: column;
-    margin: 10px;
-}
-
-.footerLinks ul li {
-    width: auto;
-    list-style: none;
-    padding: 0px;
-    display: flex;
-    justify-content: flex-end;
-    font-size: 12px;
-    
-
-}
-
-
-/*---------- CAJA #4 REDES----------*/
-
-
-.footerRedes i {
-    font-size: 17px;
-    color: #DDF246;
-    margin: 5px;
-}
-.footerRedes {
-    display: flex;
-    align-items: center;
-    height: 40px;
-    width: 40px;
-    
-}
-
-/*------------HOVERFOOTER-------------*/
-
-#footer ul a:hover {
-    color: #DDF246;
-}
-
-/*----SISTEMA RESPONSIVO FOOTER-------*/
-
-
-@media (max-width: 768px) {
-    #footer {
-        flex-direction: column;
-        gap: 10px;
-    }
-    .footerLinks ul li {
-        font-size: 12px;
-        justify-content: center;
-        padding: 0;
-    }
-    
-    .footerLinks ul {
-        margin-top: 0;
-        justify-content: center;
-        padding: 0;
-    }
-    .footerRedes i {
-        font-size: 12px;
-    }
-
-    .footerLogonombre h4 {
-        font-size: 14px;
-        justify-content: center;
-        margin-top: 0;
-
-    }
-    .footerLogonombre p {
-        font-size: 8px;
-        justify-content: center;
-    }
-}
-
-
-@media (max-width: 480px) {
-    #footer {
-        flex-direction: column;
-        gap: 10px;
-    }
-    .footerLinks ul li {
-        font-size: 10px;
-        justify-content: center;
-        padding: 0;
-    }
-    
-    .footerLinks ul {
-        margin-top: 0;
-        justify-content: center;
-        padding: 0;
-    }
-    .footerRedes i {
-        font-size: 10px;
-    }
-
-
-    .footerLogonombre h4 {
-        font-size: 12px;
-        justify-content: center;
-        margin-top: 0;
-
-    }
-    .footerLogonombre p {
-        font-size: 8px;
-        justify-content: center;
-    }
-}
