--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,195 +1,8 @@
 @import "footer";
 @import "headerNav";
 @import "resetCss";
-@import "personas/main";
-
-
-
-/* ---------------FUENTE -------------------*/
-
-@font-face {
-    font-family: fuenteHelvetica;
-    src: url(../fuentes/Helvetica.ttf);
-}
-
-/* ----------------------------------MAIN-------------------------------------------------------- */
-/* ---------ESTILOS DEL BODY------- */
-
-main {
-    min-height: 100vh;
-    background-color: #ffffff;
-
-}
-
-/*----------------SISTEMA RESPONSIVO MAIN INICIO-------------*/
-
-@media (max-width: 942px) {
-    main, footer {
-        margin-top: 0;
-        padding: 0;
-}
-}
-@media (max-width: 768px) {
-main {
-    min-height: 0;
-    margin-bottom: 20px;
-    margin-top: 40px;
-}
-}
-
-
-
-
-/*----------------------------------------PAGE FOTOSLUGARES-------------------------------------------*/
-
-#fotosLugares {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-#fotosLugares img {
-    width: 483px;
-    margin: 15px;
-    display: flex;
-}
-
-/* --------------------------------------------PAGE BIO -------------------------------------------------- */
-
-#biografia {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    background-color:#ffffff;
-}
-
-#contenedorTextobio {
-    display: flex;
-    flex-direction: column;
-}
-
-.biografiaParrafo {
-    display: flex;
-    text-align: justify;
-    width: 480px;
-    height: 200px;
-    justify-content: flex-start;
-    padding: 20px;
-}
-
-.biografiaAbout {
-    display: flex;
-    flex-direction: column;
-    color: #000000;
-    font-size: 12px;
-    padding: 20px;
-}
-
-.biografiaParrafo p {
-    color: #000000;
-    font-size: 15px;
-}
-
-.biografiaFoto img {
-    width: 380px;
-    height: 380px;
-}
-
-/*----------------SISTEMA RESPONSIVO bio------------*/
-@media (max-width: 968px) {
-    .biografiaFoto img {
-        width: 320px;
-        height: 320px;
-    }
-}
-@media (max-width: 768px) {
-    #biografia {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 30px;
-    }
-    #biografia .biografiaFoto img {
-        width: 250px;
-        height: 250px;
-        margin-top: 20px;
-    }
-    #contenedorTextobio .biografiaParrafo {
-        width: 320px;
-        height: 200px;
-    }
-    #contenedorTextobio .biografiaParrafo p {
-        font-size: 12px;
-        
-    }
-    .biografiaAbout {
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-}
-
-@media (max-width: 480px) {
-    #biografia .biografiaFoto img {
-        width: 250px;
-        height: 250px;
-        margin-top: 0;
-    }
-    #biografia {
-        margin: 20px 0 0 0;
-    }
-}
-
-
-
-/*-------------PAGE CONTACTO --------*/
-
-.MainContacto {
-    background-image: url(../images/contacto/contacto.jpg);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-}
-#contenedorContacto {
-    display: inline-block;
-    
-}
-
-.formContacto form {
-    position: absolute; 
-    margin-top: 100px;
-    left: 495px;
-}
-
-.formcontactoNombre {
-    font-size: 15px;
-    background-color: white;
-    border: 1px solid grey;
-    height: 35px;
-    border-radius: 20px;
-    width: 250px;
-}
-
-.formcontactoEmail {
-    font-size: 15px;
-    background-color: white;
-    border: 1px solid grey;
-    height: 35px;
-    border-radius: 20px;
-    width: 250px;
-}
-
-.formcontactoMensaje {
-    font-size: 15px;
-    background-color: white;
-    border: 1px solid grey;
-    border-radius: 10px;
-    width: 260px;
-}
-
-#submit {
-    font-size: 15px;
-    margin: 3px;
-    display: inline-block;
-
-}
-
+@import "../sass/personas/mainPers";
+@import "../sass/inicio/mainInicio";
+@import "../sass/lugares/mainLug";
+@import "../sass/bio/mainBio";
+@import "../sass/contacto/maincontacto"
