--- a/sass/_headerNav.scss
+++ b/sass/_headerNav.scss
@@ -16,25 +16,25 @@
     padding: 5px;
     height: 80px;
     justify-content: space-between;
-}
-.MenuNav {
-    height: 80px;
-    display: flex;
-    align-items: center;
-}
-.MenuNav ul {
-    padding: 0;
-    margin: 0;
-    margin-right: 10px;
-    float: right;
-}
-.MenuNav ul li {
-    line-height: 80px;
-    margin: 0 5px;
-}
-.MenuNav ul li a {
-    color: #1416B8;
-    font-size: 14px;
+    .MenuNav {
+        height: 80px;
+        display: flex;
+        align-items: center;
+        ul {
+            padding: 0;
+            margin: 0;
+            margin-right: 10px;
+            float: right;
+            li {
+                line-height: 80px;
+                margin: 0 5px;
+                a {
+                    color: #1416B8;
+                    font-size: 14px;
+                }
+            }
+        }
+    }
 }
 .LogoHeader h4 a {
     color: #DDF246;
@@ -73,37 +73,40 @@
     #navBar {
         justify-content: space-evenly;
         margin-top: 20px;
-    }
-    #navBar ul li {
-        display: block;
-        margin:  50px 0;
-        line-height: 30px;
-    }
-    #navBar ul li a {
-        font-size: 14px;
-    }
-    .LogoHeader h4 a {
-        font-size: 35px;
-        line-height: 85px;
+        ul {
+            position: fixed;
+            width: 100%;
+            height: 100vh;
+            background: #DDF246;
+            top: 80px;
+            left: 0;
+            left: -100%;
+            text-align: center;
+            transition: all .5s;
+            li {
+                display: block;
+                margin:  50px 0;
+                line-height: 30px;
+                a {
+                    font-size: 14px;
+                }
+            }
         }
-    .LogoHeader {
-    display: flex;
-    align-items: center;
-}
+        .LogoHeader {
+            display: flex;
+            align-items: center;
+        }
+    }
+    
+.LogoHeader h4 a {
+    font-size: 35px;
+    line-height: 85px;
+        }
+
 .checktn {
     display: block;
 }
-#navBar ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #DDF246;
-    top: 80px;
-    left: 0;
-    left: -100%;
-    text-align: center;
-    transition: all .5s;
-}
+
 #navBar .MenuNav ul a:hover {
     color:white;
 }
